--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -21,24 +21,32 @@
   &-prev,
   &-next {
     position: absolute;
-    display: none;
     z-index: 10;
     top: 50%;
     line-height: 1;
     margin-top: -2em;
+    background-color: #fff;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    @media (min-width: 768px) {
-      display: block;
+    transition: all 0.3s;
+    border: 1px solid #ccc;
+    @media (max-width: 768px) {
+      display: none;
     }
     &:hover {
-      opacity: 0.6;
+      opacity: 0.8;
     }
     &.swiper-button-disabled {
       display: none;
     }
 
     img {
-      max-width: 50px;
+      max-width: 30px;
     }
   }
   &-prev {
