--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -77,3 +77,34 @@ ul {
   padding: 0;
   list-style: none;
 }
+
+.modal {
+  label {
+    color: #fff;
+  }
+  &-btn {
+    background-color: $blue;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 20px;
+    color: #fff;
+    font-weight: 600;
+    border: 2px solid transparent;
+    transition: all 0.3s;
+
+    &:hover {
+      background: transparent;
+      border-color: #fff;
+    }
+  }
+}
+
+.dropdown-toggle {
+  &::after {
+    content: none;
+  }
+}
+
+.dropdown-menu-dark {
+  background-color: #323232;
+}
