--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
       }
       &__item {
         position: relative;
+
         &::before {
           content: "";
           position: absolute;
@@ -102,7 +103,10 @@
         }
 
         @media (max-width: 1200px) {
-          max-height: 50vh;
+          height: 50vh;
+        }
+        @media (min-width: 1200px) {
+          min-height: 500px;
         }
       }
       &__content {
@@ -396,12 +400,17 @@
       &__content {
         // background-image: url("../img/about/background.png");
         // background-size: cover;
-        height: 70vh;
+        // height: 70vh;
+        text-align: center;
         img {
           object-fit: cover;
-          width: 100%;
-          height: 100%;
+          width: 80%;
+          margin-top: 70px;
         }
+      }
+
+      &__footer {
+        margin-top: 50px;
       }
 
       &__text {
