fix mobile menu

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -98,7 +98,7 @@
     background-color: #323232;
     padding: 10px 0;
     position: relative;
-    z-index: 2000;
+    z-index: 1000;
     @media (min-width: 1200px) {
       display: none;
     }
@@ -183,13 +183,13 @@
       top: 50px;
     }
     &.active {
-      z-index: 1000;
+      z-index: 900;
       .header-headings {
         &__backdrop {
           opacity: 1;
         }
         &__menu {
-          z-index: 1010;
+          z-index: 910;
           transform: translateX(0px);
         }
       }
@@ -215,6 +215,7 @@
       transform: translateX(-100%);
       overflow-y: auto;
       transition: 0.3s;
+      padding-bottom: 50px;
     }
 
     .menu {
