--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -4,6 +4,35 @@ body {
   }
 }
 
+.page-title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 30px;
+  margin-top: 50px;
+  @media (min-width: 768px) {
+    font-size: 40px;
+    margin-top: 100px;
+  }
+}
+
+.pagination {
+  margin-top: 50px;
+  &__item {
+    &:not(:first-child) {
+      display: flex;
+      align-items: center;
+      &::before {
+        content: "";
+        margin: 0 10px;
+        background-color: #000;
+        width: 20px;
+        height: 1px;
+        display: inline-block;
+      }
+    }
+  }
+}
+
 .section {
   @media (min-width: 768px) {
     // margin: 200px 0;
