--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -697,6 +697,12 @@
     .item {
       box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
       border-radius: 5px;
+      color: #000;
+      text-decoration: none;
+      transition: 0.3s;
+      &:hover {
+        box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+      }
       &__image {
         width: 100%;
         border-radius: 5px;
@@ -836,6 +842,7 @@
         flex-wrap: wrap;
         justify-content: center;
         margin-top: 30px;
+        padding: 0 10px;
         @media (min-width: 768px) {
           margin-top: 70px;
         }
