add catalog-2 page + bugfix

--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -17,6 +17,9 @@ body {
 
 .pagination {
   margin-top: 50px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   &__item {
     &:not(:first-child) {
       display: flex;
@@ -43,6 +46,10 @@ body {
     font-size: 25px;
     @media (min-width: 768px) {
       font-size: 35px;
+    }
+
+    &--center {
+      text-align: center;
     }
   }
 
@@ -142,4 +149,21 @@ ul {
 
 .dropdown-menu-dark {
   background-color: #323232;
+}
+
+.btn {
+  &--orange {
+    background-color: $orange;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 10px;
+    padding: 8px 20px;
+    border: 2px solid transparent;
+    transition: all 0.3s;
+
+    &:hover {
+      background: transparent;
+      border-color: #fff;
+    }
+  }
 }
