--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -673,6 +673,114 @@
       }
     }
 
+    &-2 {
+      .section {
+        &__grid {
+          display: grid;
+          grid-template-columns: repeat(1, 1fr);
+          grid-gap: 30px;
+          margin-top: 30px;
+          @media (min-width: 992px) {
+            grid-template-columns: repeat(4, 1fr);
+          }
+
+          @media (min-width: 768px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-gap: 60px;
+            margin-top: 60px;
+          }
+        }
+
+        &__title {
+          text-align: center;
+        }
+
+        &__footer {
+          margin-top: 50px;
+        }
+
+        &__text {
+          text-align: center;
+          margin-top: 50px;
+          font-weight: 300;
+          line-height: 1.5;
+        }
+      }
+
+      .item {
+        color: #000;
+        text-decoration: none;
+        transition: 0.3s;
+        position: relative;
+        &.active {
+          // position: absolute;
+          .item__wrapper {
+            // box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+            background-color: #f1f8ff;
+            position: absolute;
+            z-index: 2;
+          }
+
+          .item__text {
+            display: block;
+          }
+        }
+
+        &__wrapper {
+          box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+          border-radius: 5px;
+        }
+
+        &__image {
+          width: 100%;
+          border-radius: 5px;
+          z-index: 3;
+        }
+
+        &__price {
+          color: $blue;
+          font-weight: 600;
+          text-align: center;
+          font-size: 20px;
+        }
+
+        &__content {
+          padding: 30px;
+          // box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+        }
+        &__title {
+          font-size: 25px;
+          font-weight: 600;
+          margin-bottom: 20px;
+        }
+        &__text {
+          font-size: 18px;
+          font-weight: 300;
+          line-height: 1.5;
+          &:not(.active) {
+            display: none;
+          }
+        }
+
+        &__link {
+          display: block;
+          margin: 0 auto;
+          margin-top: 20px;
+        }
+
+        &__btn {
+          display: block;
+          margin: 0 auto;
+          margin-top: 20px;
+          &:hover {
+            background: transparent;
+            border-color: $orange;
+            color: $orange;
+          }
+        }
+      }
+    }
+
     .section {
       &__grid {
         display: grid;
@@ -790,26 +898,93 @@
       padding: 100px 0;
     }
 
+    &-catalog {
+      background: url(../img/background.png);
+      background-size: cover;
+      color: #000;
+      margin-top: 20px;
+      .section {
+        &__btn {
+          &:hover {
+            background: transparent;
+            border-color: $orange;
+            color: $orange;
+          }
+        }
+      }
+    }
+
     .section {
       &__text {
         font-size: 20px;
       }
 
       &__btn {
-        background-color: $orange;
-        color: #fff;
-        font-weight: 600;
-        border-radius: 10px;
-        padding: 8px 20px;
-        border: 2px solid transparent;
-        transition: all 0.3s;
         margin-top: 30px;
         margin-bottom: 20px;
+      }
+    }
+  }
 
-        &:hover {
-          background: transparent;
-          border-color: #fff;
+  &--features-catalog {
+    background-color: $blue;
+    text-align: center;
+    color: #fff;
+    padding: 50px 0;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+    }
+
+    .section {
+      &__grid {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+        margin-top: 50px;
+        @media (min-width: 992px) {
+          margin-top: 100px;
+          grid-gap: 100px;
+          grid-template-columns: repeat(3, 1fr);
         }
+      }
+    }
+
+    .item {
+      &__image {
+        width: 50px;
+      }
+      &__title {
+        margin: 20px;
+      }
+    }
+  }
+
+  &--feedback-catalog-2 {
+    @media (min-width: 992px) {
+      background-image: url(../img/background2.png);
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    .section {
+      &__text {
+        max-width: 500px;
+        margin: 30px auto;
+      }
+    }
+  }
+
+  &--feedback-catalog-3 {
+    margin-top: 50px;
+    @media (min-width: 768px) {
+      margin-top: 100px;
+    }
+    background-color: #f4f4f4;
+    color: #000;
+
+    .section {
+      &__text {
+        margin: 30px auto;
       }
     }
   }
@@ -971,6 +1146,20 @@
           color: $blue;
         }
       }
+    }
+  }
+
+  &--slider-catalog {
+    margin-top: 50px;
+    @media (min-width: 768px) {
+      margin-top: 100px;
+    }
+
+    text-align: center;
+    a {
+      color: #000;
+      text-decoration: none;
+      font-weight: 600;
     }
   }
 }
