--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -834,6 +834,21 @@
     }
   }
 
+  &--grid-news {
+    .item {
+      &__image {
+        max-height: 250px;
+        object-fit: cover;
+        object-position: top;
+        margin-bottom: -10px;
+      }
+      &__content {
+        position: relative;
+        z-index: 2;
+      }
+    }
+  }
+
   &--tabs {
     background-color: #f1f1f1;
     margin-top: 50px;
@@ -1160,6 +1175,50 @@
       color: #000;
       text-decoration: none;
       font-weight: 600;
+    }
+  }
+
+  &--product-info {
+    margin: 50px 0;
+    @media (min-width: 768px) {
+      margin: 100px 0;
+    }
+    .section {
+      &__image {
+        width: 100%;
+      }
+
+      &__text {
+        font-size: 20px;
+      }
+
+      &__price {
+        color: $blue;
+        font-size: 25px;
+        font-weight: 600;
+        margin-top: 50px;
+        span {
+          color: #000;
+          font-size: 20px;
+        }
+      }
+
+      &__link {
+        padding: 0;
+        margin-top: 30px;
+      }
+
+      &__btn {
+        display: block;
+        margin-top: 30px;
+        font-size: 25px;
+        padding: 10px 50px;
+        &:hover {
+          background: transparent;
+          border-color: $orange;
+          color: $orange;
+        }
+      }
     }
   }
 }
