--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1196,7 +1196,10 @@
         color: $blue;
         font-size: 25px;
         font-weight: 600;
-        margin-top: 50px;
+        margin-top: 30px;
+        @media (min-width: 768px) {
+          margin-top: 50px;
+        }
         span {
           color: #000;
           font-size: 20px;
@@ -1205,14 +1208,19 @@
 
       &__link {
         padding: 0;
-        margin-top: 30px;
+        margin-top: 20px;
+        @media (min-width: 768px) {
+          margin-top: 30px;
+        }
       }
 
       &__btn {
         display: block;
         margin-top: 30px;
-        font-size: 25px;
-        padding: 10px 50px;
+        @media (min-width: 768px) {
+          font-size: 25px;
+          padding: 10px 50px;
+        }
         &:hover {
           background: transparent;
           border-color: $orange;
