--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -383,7 +383,7 @@
     }
   }
 
-  &--about {
+  &--about-main {
     padding: 70px 0;
     @media (min-width: 768px) {
       padding: 200px 0;
@@ -393,14 +393,7 @@
     box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
 
     .section {
-      &__title {
-        text-align: center;
-      }
-
       &__content {
-        // background-image: url("../img/about/background.png");
-        // background-size: cover;
-        // height: 70vh;
         text-align: center;
         img {
           object-fit: cover;
@@ -412,13 +405,77 @@
       &__footer {
         margin-top: 50px;
       }
+    }
+  }
+
+  &--about {
+    padding: 50px 0;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+    }
+
+    .section {
+      &__title {
+        color: $blue;
+        text-transform: none;
+      }
+
+      &__subtitle {
+        color: $blue;
+        font-size: 25px;
+      }
 
       &__text {
         font-size: 20px;
-        text-transform: uppercase;
+        margin-top: 30px;
+      }
+
+      &__image {
+        max-width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+
+      &__item {
+        font-size: 20px;
+        &::before {
+          content: "";
+          background-color: $orange;
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          border-radius: 100%;
+          margin-right: 20px;
+        }
+      }
+    }
+  }
+
+  &--about-2 {
+    margin: 50px 0;
+    @media (min-width: 768px) {
+      margin: 100px 0;
+    }
+    .section {
+      &__subtitle {
         color: $dark-gray;
-        width: 300px;
-        position: absolute;
+        font-size: 20px;
+        @media (min-width: 768px) {
+          font-size: 27px;
+        }
+      }
+
+      &__text {
+        margin-top: 30px;
+        font-weight: 300;
+      }
+
+      &__item {
+        display: flex;
+        align-items: center;
+        img {
+          max-width: 100px;
+          margin-right: 35px;
+        }
       }
     }
   }
@@ -622,12 +679,17 @@
 
   &--menu {
     background-color: $blue;
-    margin: 70px 0;
     padding: 50px 0;
 
     @media (min-width: 768px) {
-      margin: 200px 0;
       padding: 100px 0;
+    }
+    &:not(.section--menu-about) {
+      margin: 70px 0;
+
+      @media (min-width: 768px) {
+        margin: 200px 0;
+      }
     }
 
     .section {
@@ -1225,6 +1287,120 @@
           background: transparent;
           border-color: $orange;
           color: $orange;
+        }
+      }
+    }
+  }
+
+  &--gallery {
+    .section {
+      &__image {
+        max-width: 100%;
+      }
+    }
+  }
+
+  &--services {
+    background-color: $blue;
+    color: #fff;
+    padding: 50px 0;
+    margin-top: 50px;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+      margin-top: 100px;
+    }
+
+    .section {
+      &__title {
+        text-align: center;
+      }
+      &__list {
+        margin-top: 50px;
+
+        @media (min-width: 768px) {
+          margin-top: 100px;
+          font-size: 20px;
+        }
+      }
+
+      &__item {
+        @media (min-width: 768px) {
+          font-size: 20px;
+        }
+
+        &:not(:first-child) {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+
+  &--cause {
+    background-color: $blue;
+    color: #fff;
+    padding: 50px 0;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+    }
+
+    .section {
+      &__title {
+        text-align: center;
+      }
+
+      &__content {
+        margin-top: 30px;
+        @media (min-width: 768px) {
+          margin-top: 50px;
+        }
+      }
+
+      &__subtitle {
+        @media (min-width: 768px) {
+          font-size: 24px;
+        }
+      }
+
+      &__item {
+        height: 200px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        @media (max-width: 767px) {
+          background-position: center;
+          text-align: center;
+          margin-top: 30px;
+          justify-content: center;
+        }
+        @media (min-width: 768px) {
+          padding: 0 50px;
+          &--1,
+          &--2,
+          &--3 {
+            justify-content: flex-end;
+          }
+        }
+        &--1 {
+          background-image: url(../img/cause/1.png);
+          @media (min-width: 768px) {
+            background-position: left;
+          }
+        }
+        &--2 {
+          background-image: url(../img/cause/2.png);
+        }
+        &--3 {
+          background-image: url(../img/cause/3.png);
+          @media (min-width: 768px) {
+            background-position: right;
+          }
+        }
+        &--4 {
+          background-image: url(../img/cause/4.png);
+        }
+        &--5 {
+          background-image: url(../img/cause/5.png);
         }
       }
     }
