--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -298,6 +298,203 @@
     }
   }
 
+  &--news {
+    padding: 50px 0;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+    }
+
+    .section {
+      &__title {
+        color: $blue;
+        text-transform: none;
+      }
+
+      &__subtitle {
+        font-weight: 600;
+        font-size: 20px;
+      }
+
+      &__text {
+        font-size: 20px;
+        margin-top: 30px;
+      }
+
+      &__image {
+        max-width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+      &__list {
+        @media (max-width: 992px) {
+          margin-bottom: 30px;
+        }
+      }
+
+      &__item {
+        font-size: 20px;
+        &::before {
+          content: "";
+          background-color: $orange;
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          border-radius: 100%;
+          margin-right: 20px;
+        }
+      }
+
+      &__links {
+        display: flex;
+        justify-content: space-between;
+        margin: 30px 0;
+        @media (min-width: 768px) {
+          margin: 50px 0;
+        }
+      }
+
+      &__link {
+        color: #000;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 12px;
+        display: flex;
+        @media (min-width: 768px) {
+          font-size: 20px;
+        }
+
+        img {
+          width: 25px;
+          object-fit: contain;
+        }
+
+        &--prev {
+          img {
+            margin-right: 20px;
+          }
+        }
+        &--next {
+          img {
+            margin-left: 20px;
+          }
+        }
+      }
+
+      &__aside {
+        @media (max-width: 992px) {
+          margin-top: 50px;
+        }
+      }
+    }
+
+    .aside {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+      box-shadow: 0 0 10px 5px rgba(45, 45, 45, 0.5);
+      &__image {
+        width: 100%;
+      }
+      &__content {
+        padding: 20px;
+        text-align: center;
+      }
+      &__title {
+        font-weight: 600;
+        font-size: 20px;
+      }
+    }
+  }
+
+  &--about {
+    padding: 50px 0;
+    @media (min-width: 768px) {
+      padding: 100px 0;
+    }
+
+    .section {
+      &__title {
+        color: $blue;
+        text-transform: none;
+      }
+
+      &__subtitle {
+        color: $blue;
+        font-size: 25px;
+      }
+
+      &__text {
+        font-size: 20px;
+        margin-top: 30px;
+      }
+
+      &__image {
+        max-width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+
+      &__item {
+        font-size: 20px;
+        &::before {
+          content: "";
+          background-color: $orange;
+          display: inline-block;
+          width: 10px;
+          height: 10px;
+          border-radius: 100%;
+          margin-right: 20px;
+        }
+      }
+    }
+
+    .aside {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+      box-shadow: 0 0 10px 5px rgba(45, 45, 45, 0.5);
+      &__image {
+        width: 100%;
+      }
+      &__content {
+        padding: 20px;
+        text-align: center;
+      }
+      &__title {
+        font-weight: 600;
+        font-size: 20px;
+      }
+    }
+  }
+
+  &--about-2 {
+    margin: 50px 0;
+    @media (min-width: 768px) {
+      margin: 100px 0;
+    }
+    .section {
+      &__subtitle {
+        color: $dark-gray;
+        font-size: 20px;
+        @media (min-width: 768px) {
+          font-size: 27px;
+        }
+      }
+
+      &__text {
+        margin-top: 30px;
+        font-weight: 300;
+      }
+
+      &__item {
+        display: flex;
+        align-items: center;
+        img {
+          max-width: 100px;
+          margin-right: 35px;
+        }
+      }
+    }
+  }
+
   &--video {
     position: relative;
     &:before {
@@ -331,16 +528,27 @@
       }
       &__title {
         margin-top: 20px;
+        color: rgba(255, 255, 255, 0.7);
       }
     }
-    iframe {
-      height: 400px;
-      @media (min-width: 992px) {
-        height: 600px;
+
+    &:not(.section--video-about) {
+      iframe {
+        height: 400px;
+        @media (min-width: 992px) {
+          height: 600px;
+        }
       }
     }
+
     img {
       max-width: 100%;
+    }
+  }
+
+  &--video-about {
+    iframe {
+      height: 300px;
     }
   }
 
@@ -404,78 +612,6 @@
 
       &__footer {
         margin-top: 50px;
-      }
-    }
-  }
-
-  &--about {
-    padding: 50px 0;
-    @media (min-width: 768px) {
-      padding: 100px 0;
-    }
-
-    .section {
-      &__title {
-        color: $blue;
-        text-transform: none;
-      }
-
-      &__subtitle {
-        color: $blue;
-        font-size: 25px;
-      }
-
-      &__text {
-        font-size: 20px;
-        margin-top: 30px;
-      }
-
-      &__image {
-        max-width: 100%;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-      }
-
-      &__item {
-        font-size: 20px;
-        &::before {
-          content: "";
-          background-color: $orange;
-          display: inline-block;
-          width: 10px;
-          height: 10px;
-          border-radius: 100%;
-          margin-right: 20px;
-        }
-      }
-    }
-  }
-
-  &--about-2 {
-    margin: 50px 0;
-    @media (min-width: 768px) {
-      margin: 100px 0;
-    }
-    .section {
-      &__subtitle {
-        color: $dark-gray;
-        font-size: 20px;
-        @media (min-width: 768px) {
-          font-size: 27px;
-        }
-      }
-
-      &__text {
-        margin-top: 30px;
-        font-weight: 300;
-      }
-
-      &__item {
-        display: flex;
-        align-items: center;
-        img {
-          max-width: 100px;
-          margin-right: 35px;
-        }
       }
     }
   }
