--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -617,18 +617,21 @@
   }
 
   &--partners {
-    background-image: url("../img/partners/back.png");
-    background-size: cover;
+    &:not(.no-background) {
+      background-image: url("../img/partners/back.png");
+      background-size: cover;
+      -webkit-box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
+        0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
+      -moz-box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
+        0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
+      box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
+        0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
+    }
     padding: 70px 0;
     @media (min-width: 768px) {
       padding: 200px 0;
     }
-    -webkit-box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
-      0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
-    -moz-box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
-      0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
-    box-shadow: 0px 17px 29px 0px rgba(0, 0, 0, 0.2) inset,
-      0px -4px 20px -1px rgba(0, 0, 0, 0.2) inset;
+
     .section {
       &__title {
         text-align: center;
@@ -655,6 +658,27 @@
         color: #000000;
       }
     }
+  }
+
+  &--sertificaty-2 {
+    padding: 50px 0;
+    margin-top: 50px;
+    -webkit-box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
+    @media (min-width: 768px) {
+      margin-top: 100px;
+      padding: 100px 0;
+    }
+  }
+
+  &--sertificaty-3 {
+    padding: 50px 0;
+    background-image: url("../img/partners/back.png");
+    background-size: cover;
+    -webkit-box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 43px -1px rgba(0, 0, 0, 0.2);
   }
 
   &--rewievs {
@@ -1550,6 +1574,20 @@
         }
         &--5 {
           background-image: url(../img/cause/5.png);
+        }
+      }
+    }
+  }
+
+  &--page-description {
+    .section {
+      &__description {
+        font-weight: 600;
+        text-align: center;
+        margin-top: 50px;
+        @media (min-width: 768px) {
+          font-size: 20px;
+          margin-top: 100px;
         }
       }
     }
