--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -511,6 +511,7 @@
         position: absolute;
         top: 50%;
         left: 0px;
+        right: 0;
         transform: translate(0, -50%);
         text-align: center;
         color: rgba(255, 255, 255, 0.7);
