--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -25,6 +25,10 @@ body {
   align-items: center;
   flex-wrap: wrap;
   &__item {
+    a {
+      color: #000;
+      text-decoration: none;
+    }
     &:not(:first-child) {
       display: flex;
       align-items: center;
@@ -44,10 +48,11 @@ body {
   margin-top: 50px !important;
   margin: 0 auto;
   justify-content: center;
-  border: 0 !important;
-  &-link,
-  &-item {
-    border: 0 !important;
+  --bs-pagination-border-width: 0;
+  @media (min-width: 768px) {
+    .page-item {
+      margin: 0 20px;
+    }
   }
 }
 
@@ -82,16 +87,9 @@ body {
     top: 50%;
     line-height: 1;
     margin-top: -2em;
-    background-color: #fff;
-    border-radius: 100%;
     width: 50px;
     height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     cursor: pointer;
-    transition: all 0.3s;
-    border: 1px solid #ccc;
     @media (max-width: 768px) {
       display: none;
     }
@@ -107,11 +105,27 @@ body {
     }
   }
   &-prev {
-    left: 0;
+    left: -50px;
     // transform: translateX(-90%);
   }
   &-next {
-    right: 0;
+    right: -60px;
+  }
+  &-prev-thumbs,
+  &-next-thumbs {
+    height: 50px;
+    background-color: #fff;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &-prev-thumbs {
+    left: 10px;
+    // transform: translateX(-90%);
+  }
+  &-next-thumbs {
+    right: 10px;
   }
 }
 
