--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -250,11 +250,12 @@
     left: 0;
     top: 32px;
     min-width: 300px;
-    opacity: 0;
-    z-index: -10;
+    // opacity: 0;
+    // z-index: -10;
+    display: none;
     transition: 0.3s;
     background: $black;
-    padding: 0.25rem 1rem;
+    padding: 0.25rem 0;
     border-radius: 0.375rem;
 
     li {
@@ -264,15 +265,17 @@
     }
   }
   ul li:hover > ul {
-    opacity: 1;
-    z-index: 5;
+    // opacity: 1;
+    // z-index: 5;
+    display: block;
   }
   &__list--3 {
     position: absolute;
     top: 0px;
     left: 280px;
-    opacity: 0;
-    z-index: -10;
+    // opacity: 0;
+    // z-index: -10;
+    display: none;
     transition: 0.3s;
     background: $black;
     padding: 0.25rem 1rem;
@@ -289,7 +292,7 @@
   }
   &__item {
     position: relative;
-    padding: 10px;
+    padding: 10px 20px;
   }
   &__item a {
     color: #fff;
