--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -249,9 +249,7 @@
     position: absolute;
     left: 0;
     top: 32px;
-    min-width: 300px;
-    // opacity: 0;
-    // z-index: -10;
+    min-width: 200px;
     display: none;
     transition: 0.3s;
     background: $black;
@@ -265,21 +263,17 @@
     }
   }
   ul li:hover > ul {
-    // opacity: 1;
-    // z-index: 5;
     display: block;
   }
   &__list--3 {
     position: absolute;
     top: 0px;
-    left: 280px;
-    // opacity: 0;
-    // z-index: -10;
+    left: 180px;
     display: none;
     transition: 0.3s;
     background: $black;
-    padding: 0.25rem 1rem;
-    min-width: 300px;
+    padding: 0.25rem 0;
+    min-width: 200px;
     border-radius: 0.375rem;
   }
   &__list {
