--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1002,6 +1002,14 @@
           font-size: 25px;
           font-weight: 600;
           margin-bottom: 20px;
+          a {
+            color: #000;
+            text-decoration: none;
+            transition: 0.3s;
+            &:hover {
+              opacity: 0.7;
+            }
+          }
         }
         &__text {
           font-size: 18px;
