--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -86,9 +86,7 @@ body {
     z-index: 10;
     top: 50%;
     line-height: 1;
-    margin-top: -2em;
-    width: 50px;
-    height: 50px;
+    transform: translateY(-50%);
     cursor: pointer;
     @media (max-width: 768px) {
       display: none;
@@ -106,10 +104,9 @@ body {
   }
   &-prev {
     left: -50px;
-    // transform: translateX(-90%);
   }
   &-next {
-    right: -60px;
+    right: -50px;
   }
   &-prev-thumbs,
   &-next-thumbs {
